@@ -38,6 +38,9 @@ Version 1.4.22 - SVN
     $default_sub_of_inbox is TRUE if it was FALSE (e.g., Courier IMAP users)
     and after updating to this version, your special folders are no longer
     listed at the top of your folder list).
+  - Optimized message highlighting rules; faster message list display
+    and faster highlight rules management (thanks to C. Bensend for
+    extensive effort helping diagnose)
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
